# retailmanagement-api

./: .gitignore  README.md  docker-compose.yml  package.json  turbo.json
apps/mobile/: package.json
apps/mobile/src/: index.tsx
apps/web/: next.config.js  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(auth)/login/: page.tsx
apps/web/app/(auth)/registro/: page.tsx
apps/web/app/(dashboard)/: layout.tsx  page.tsx
apps/web/app/(dashboard)/bancos/: page.tsx
apps/web/app/(dashboard)/caja/: page.tsx
apps/web/app/(dashboard)/caja/historial/: page.tsx
apps/web/app/(dashboard)/clientes/: page.tsx
apps/web/app/(dashboard)/clientes/nuevo/: page.tsx
apps/web/app/(dashboard)/compras/: page.tsx
apps/web/app/(dashboard)/compras/nueva/: page.tsx
apps/web/app/(dashboard)/configuracion/dgii/: page.tsx
apps/web/app/(dashboard)/configuracion/empresa/: page.tsx
apps/web/app/(dashboard)/configuracion/impresora/: page.tsx
apps/web/app/(dashboard)/configuracion/usuarios/: page.tsx
apps/web/app/(dashboard)/contabilidad/: page.tsx
apps/web/app/(dashboard)/contabilidad/asientos/: page.tsx
apps/web/app/(dashboard)/contabilidad/libro-mayor/: page.tsx
apps/web/app/(dashboard)/contabilidad/periodos/: page.tsx
apps/web/app/(dashboard)/gastos/: page.tsx
apps/web/app/(dashboard)/inventario/: page.tsx
apps/web/app/(dashboard)/inventario/almacenes/: page.tsx
apps/web/app/(dashboard)/inventario/categorias/: page.tsx
apps/web/app/(dashboard)/inventario/fisico/: page.tsx
apps/web/app/(dashboard)/inventario/movimientos/: page.tsx
apps/web/app/(dashboard)/inventario/productos/: page.tsx
apps/web/app/(dashboard)/nomina/: page.tsx
apps/web/app/(dashboard)/nomina/adelantos/: page.tsx
apps/web/app/(dashboard)/nomina/desprendibles/: page.tsx
apps/web/app/(dashboard)/nomina/empleados/: page.tsx
apps/web/app/(dashboard)/nomina/prestamos/: page.tsx
apps/web/app/(dashboard)/nomina/run/: page.tsx
apps/web/app/(dashboard)/nomina/turnos/: page.tsx
apps/web/app/(dashboard)/pos/: page.tsx
apps/web/app/(dashboard)/pos/caja/: page.tsx
apps/web/app/(dashboard)/pos/historial/: page.tsx
apps/web/app/(dashboard)/proveedores/: page.tsx
apps/web/app/(dashboard)/proveedores/nuevo/: page.tsx
apps/web/app/(dashboard)/reportes/: page.tsx
apps/web/app/(dashboard)/reportes/dgii/: page.tsx
apps/web/app/(dashboard)/reportes/financiero/: page.tsx
apps/web/app/(dashboard)/reportes/ventas/: page.tsx
apps/web/app/(dashboard)/ventas/: page.tsx
apps/web/app/api/sales/: route.ts
apps/web/lib/: core-client.ts
docs/: 00-OVERVIEW-MONOREPO.md  00-PLAN-MAESTRO-SISTEMA-COMPLETO.md  01-ARCHITECTURE.md  02-DGII-COMPLIANCE.md  03-BANK-CORE-EVENT-DRIVEN.md  04-RUST-CORE-RPC.md  05-PAYROLL-ADVANCE.md  06-API-SPEC.md  07-MONOREPO.md  08-DATABASE.md  09-XADES-REAL-IMPLEMENTATION.md  10-FULL-ECF-BUILDER.md  11-RFCE-ARECF-ACECF.md  README.md
services/core/: .env.example  Cargo.toml  build.rs  docker-compose.yml  fix-tigerbeetle.sh
services/core/src/: arecf_acecf_builder.rs  dgii_client.rs  ecf_builder.rs  lib.rs  main.rs  rfce_builder.rs  xml_c14n.rs
services/core/src/aggregates/: employee.rs  inventory.rs  mod.rs  sale.rs
services/core/src/event_store/: mod.rs
services/core/src/grpc/: fiscal.rs  mod.rs  payroll.rs
services/core/src/ledger/: mod.rs
services/core/src/services/: auth_service.rs  ecfl_service.rs  mod.rs  payroll_service.rs  report_service.rs
(+17 files in other folders)
